--- a/newCommands.sty
+++ b/newCommands.sty
@@ -462,3 +462,6 @@
     \dot{#1#2}%
   \fi%
 }
+
+\newcommand{\pro}{\item[\textbf{\color{green}+}]}
+\newcommand{\con}{\item[\hspace{-2ex}\textbf{\color{red}--}]}
