--- a/main.tex
+++ b/main.tex
@@ -118,9 +118,9 @@
 
 \date{\today} % Date, can be changed to a custom date
 
-\graphicspath{{./figures/}}
+\graphicspath{{./img/pdf_tex/}}
 \makeatletter
-\def\input@path{{./figures/}}
+\def\input@path{{./img/pdf_tex/}}
 \makeatother
 
 \begin{document}
@@ -161,48 +161,148 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{The control theoretic perspective}
-\begin{frame}{Control theory - Intro}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Control theory - Goal}
+\begin{center}
+{\large Control theory seeks means to generate control signals $\uv(t)$ such that the state evolves in a desired way. }
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Control theory - Realization I}
+\begin{center}
+	\vspace{-6pt}
+    \textbf{\Large Centrifugal governor}
+    \def\svgwidth{.5\linewidth}
+    \input{regulator.pdf_tex}
+    \only<2>{
+    \begin{minipage}{0.49\linewidth}
+    \begin{center}
+        opening angle depends on current speed
+    \end{center}
+    \end{minipage}
+    \begin{minipage}{0.49\linewidth}
+    \begin{center}
+        negative feedback between opening angle and 
+    \end{center}
+    \end{minipage}
+    }
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Control theory - Concepts I}
 A robot from a control theoretic perspective looks like this:
 \begin{align*}
-    \xd = f(\x) + g_{\uv}(\x, \uv) + g_{\omega_\x}(\x, \omega_\x)
-    \y = h(\x) + g_{\omega_\y}(\omega_\y)
+    \xd &= f(\x) + g_{\uv}(\x, \uv) + g_{{\omega_{\x}}}(\x, \omega_{\x})  \\
+    \y &= h(\x, \omega_{\y})
 \end{align*}
 \only<1->{
     \begin{columns}
     \begin{column}{0.5\linewidth}
-        $\x$ : robot state\\
-        $\y$ : ''observable´´ state
+        $\x$ : robot state \\
+        $\y$ : output state \\
+        $\omega_{\x}$ : perturbations \\
+        $\omega_{\y}$ : (measurement) noise
     \end{column}
     \begin{column}{0.5\linewidth}
-        $f,g$ : system and input dynamics
-        $\uv$ : control input
+        $f,\ g$ : system and input dynamics \\
+        $\uv$ : control input \\
+        $g_{{\omega_{\x}}}$ : perturbation dynamics
     \end{column}
     \end{columns}
 }
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Control theory - Goal}
-\only<1>{
-Control theory seeks to generate a control signal $\uv(t)$ such that the state evolves in a desired way.
-}
-\only<2->{
+\begin{frame}{Control theory - Concepts II}
 \begin{center}
-    {\large Centrifugal governor}\\
-    Keeping steam engines at constant speed [James Watts 1788]
-    \def\svgwidth{\linewidth}
-    \input{reg.pdf_tex}
-    \only<3>{
-    \begin{minipage}{0.49\linewidth}
-        opening angle depends on current speed
-    \end{minipage}
-    \begin{minipage}{0.49\linewidth}
-        negative feedback between opening angle and 
-    \end{minipage}
-    }
+\textbf{\Large Formalizing ``in a desired way''}\\[12pt]
+\begin{minipage}{\linewidth}
+\begin{minipage}[t]{0.49\linewidth}
+	\begin{center}
+	\textbf{\large Trajectory generation: }\\[4pt]
+	compute a feasible trajectory
+	\end{center}	
+	\vfill
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.49\linewidth}
+	\begin{center}
+	\textbf{\large Stabilization: }\\[4pt]
+	reject perturbations and make the control ``robust''
+	\end{center}
+	\vfill
+\end{minipage}
+\only<2>{
+\begin{center}
+\textbf{\large Classification of the dynamics:\\[4pt] }
+\begin{minipage}[c]{\linewidth}
+	\textbullet nonlinear \hfill \textbullet polynomial \hfill \textbullet linear \hfill
+\end{minipage}
 \end{center}
+}
+\end{minipage}
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Trajectory generation - Dubins' car}
+\begin{center}
+Simplified car dynamics:\\
+constant forward velocity, minimal turning radius
+\only<1>{
+\begin{figure}
+	\def\svgwidth{\linewidth}
+	\input{dubins.pdf_tex}
+\end{figure}
+It can be shown that the ideal (shortest) trajectory between two configurations contains only straight lines and circle segments with minimal radius.
+}
+
+\only<2>{
+\begin{figure}
+	\def\svgwidth{.6\linewidth}
+	\input{dubins_2_0.pdf_tex}
+\end{figure}
+By allowing for more expressive behaviour (obstacles), the problem becomes (drastically) more complicated.
+}
+%https://en.wikipedia.org/wiki/Dubins_path
+%Johnson, H. H "An application of the maximum principle to the geometry of plane curves", Proceedings of the American Mathematical Society, 44(2):432- 435, 1974.
+%Boissonat, J.D.; A. Cerezo; K. Leblond (May 1992). "Shortest Paths of Bounded Curvature in the Plane" (PDF). Proceedings of the IEEE International Conference on Robotics and Automation. 3. Piscataway, NJ. pp. 2315–2320. doi:10.1109/ROBOT.1992.220117.
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Trajectory generation - Randomized planning}
+\only<1>{
+\begin{figure}
+	\def\svgwidth{\linewidth}
+	\input{planning_0.pdf_tex}
+\end{figure}
+}
+\only<2>{
+\begin{figure}
+	\def\svgwidth{\linewidth}
+	\input{planning_1.pdf_tex}
+\end{figure}
+}
+\only<3>{
+\begin{figure}
+	\def\svgwidth{.8\linewidth}
+	\input{planning_2.pdf_tex}
+\end{figure}
+}
+\only<4>{
+\begin{figure}
+	\def\svgwidth{.8\linewidth}
+	\input{planning_3.pdf_tex}
+\end{figure}
+}
+\only<5>{
+\begin{figure}
+	\def\svgwidth{.8\linewidth}
+	\input{planning_4.pdf_tex}
+\end{figure}
 }
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 
 \section{The industrial perspective}
 \begin{frame}{The industrial perspective}
@@ -224,11 +324,11 @@ Control theory seeks to generate a control signal $\uv(t)$ such that the state e
         \begin{minipage}{0.49\linewidth}
         \large{Serial link robotic arm}
         \begin{itemize}
-            \item[+] Large work-space
-            \item[+] Versatility
+            \pro Large work-space
+            \pro Versatility
             \item[]
-            \item[-] Complexity due to redundancy
-            \item[-] Relatively slow
+            \con Complexity due to redundancy
+            \con Relatively slow
         \end{itemize}
         \end{minipage}
     \end{center}
@@ -250,11 +350,11 @@ Control theory seeks to generate a control signal $\uv(t)$ such that the state e
         \begin{minipage}{0.49\linewidth}
         \large{Serial link robotic arm}
         \begin{itemize}
-            \item[+] Speed & precision
-            \item[+] Large ''work-space´´
+            \pro Speed \& precision
+            \pro Large 	work-space
             \item[]
-            \item[-] Complexity due to internal constraints
-            \item[-] Restricted orientation
+            \con Complexity due to internal constraints
+            \con Restricted orientation
         \end{itemize}
         \end{minipage}
     \end{center}
@@ -276,11 +376,11 @@ Control theory seeks to generate a control signal $\uv(t)$ such that the state e
         \begin{minipage}{0.49\linewidth}
         \large{Serial link robotic arm}
         \begin{itemize}
-            \item[+] Increases efficiency in warehouses
-            \item[+] Semi-autonomous systems
+            \pro Increases efficiency in warehouses
+            \pro Semi-autonomous systems
             \item[]
-            \item[-] Complexity due to multi-agent nature
-            \item[-] Very task specific
+            \con Complexity due to multi-agent nature
+            \con Very task specific
         \end{itemize}
         \end{minipage}
     \end{center}
