--- a/main.tex
+++ b/main.tex
@@ -174,7 +174,7 @@
     \textbf{\Large Centrifugal governor}
     \def\svgwidth{.5\linewidth}
     \input{regulator.pdf_tex}
-    \only<2>{
+    \visible<2>{
     \begin{minipage}{0.49\linewidth}
     \begin{center}
         opening angle depends on current speed
@@ -195,7 +195,7 @@ A robot from a control theoretic perspective looks like this:
     \xd &= f(\x) + g_{\uv}(\x, \uv) + g_{{\omega_{\x}}}(\x, \omega_{\x})  \\
     \y &= h(\x, \omega_{\y})
 \end{align*}
-\only<1->{
+\visible<1->{
     \begin{columns}
     \begin{column}{0.5\linewidth}
         $\x$ : robot state \\
@@ -231,7 +231,7 @@ A robot from a control theoretic perspective looks like this:
 	\end{center}
 	\vfill
 \end{minipage}
-\only<2>{
+\visible<2>{
 \begin{center}
 \textbf{\large Classification of the dynamics:\\[4pt] }
 \begin{minipage}[c]{\linewidth}
@@ -300,8 +300,46 @@ By allowing for more expressive behaviour (obstacles), the problem becomes (dras
 \end{figure}
 }
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Trajectory stabilization}
+\begin{center}
+Trajectory generators give us a reference trajectory and in an ideal world we would simply have to use $\uv(t)$.\\
+\visible<2->{Sadly the world isn't perfect: modelling errors, noise, friction, ...}
+\visible<3->{
+\begin{figure}
+	\def\svgwidth{.8\linewidth}
+	\input{trajectory_stab_1.pdf_tex}	
+\end{figure}
+Compute a control law $g(\delta\x)$ s.t. the system trajectory converges to its reference
+}
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Trajectory stabilization - optimal control}
+% https://stanford.edu/class/ee363/lectures/dlqr.pdf
+% https://ocw.mit.edu/courses/mechanical-engineering/2-154-maneuvering-and-control-of-surface-and-underwater-vehicles-13-49-fall-2004/lecture-notes/lec19.pdf
+\begin{center}
+Consider the discrete-time linear system:
+\begin{equation*}
+\x_k = A.\x_{k-1} + B.\uv_{k-1}
+\end{equation*}
+and optimality defined by the cost function
+\begin{equation}
+J(\x_0, \uv) = \sum_{{i=0}}^{{N-1}}\left(\xT_i.Q.\xT + \tp{\uv}_i.R.\tp{\uv}_i\right) + \xT_N.Q.\xT_N
+\end{equation}
+Possible methods to obtain the Linear Quadratic Regulator (LQR):\\[6pt]
+\begin{minipage}[c]{0.5\linewidth}
+\begin{itemize}
+\item via Least-squares
+\item via Dynamic programming
+\item via Convex optimization
+\end{itemize}
+\end{minipage}
+\end{center}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \section{The industrial perspective}
