--- a/newCommands.sty
+++ b/newCommands.sty
@@ -465,3 +465,6 @@
 
 \newcommand{\pro}{\item[\textbf{\color{green}+}]}
 \newcommand{\con}{\item[\hspace{-2ex}\textbf{\color{red}--}]}
+
+%\DeclareMathOperator*{\argmax}[1]{\underset{{#1}}{{arg\,max}}
+%\DeclareMathOperator*{\argmin}[1]{\underset{{#1}}{{arg\,min}}
