--- a/main.tex
+++ b/main.tex
@@ -125,6 +125,8 @@
 \def\input@path{{./img/pdf_tex/}{./img/pgf/}}
 \makeatother
 
+\pgfplotsset{compat=1.15}
+
 \begin{document}
 \begin{frame}
 \begin{center}
@@ -554,12 +556,32 @@ Q = \begin{bmatrix} 1. & 0. \\ 0. & 1. \end{bmatrix} \ \ \ \ R = \begin{bmatrix}
 
 \begin{frame}{Optimal control - Convex Optimization}
 \begin{center}
-Another method for finding the optimal control law is based on convex optimization.\\What is convex optimization?\\[2pt]
 \only<1>{
+    Another method for finding the optimal control law is based on convex optimization.\\[2pt]
+}
+\only<2-3>{What is convex optimization?\\[2pt]}
+\only<2>{
 	\input{opt_cvxCstr.pgf}
 }
-\only<2>{
+\only<3>{
 	\input{opt_ncvxCstr.pgf}
+}
+\only<4->{
+    Is $\min_{\uv} J(\x_0)$ a convex problem?
+    \begin{align*}
+        \x_{1} &= A.\x_0 + B.\uv_0 \\
+        \x_{2} &= A.\x_1 + B.\uv_1 = A^2.\x_0 + A.B.\uv_0 + B.\uv_1 \\
+        \x_{3} &= \dots
+    \end{align*}
+}
+\only<5->{
+    States are affine functions of the inputs $\uv_i$
+}
+\only<6->{
+    \begin{equation*}
+        \forall i\colon\ \uv^- \le \uv_i \le \uv^+
+    \end{equation*}
+    Constraints are linear with respect to the input
 }
 \end{center}
 \end{frame}
@@ -585,6 +607,9 @@ Another method for finding the optimal control law is based on convex optimizati
 
 
 \section{The industrial perspective}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}{The industrial perspective}
 \begin{center}
     \Large{\textcolor{blue}{Three main applications}}
@@ -594,10 +619,11 @@ Another method for finding the optimal control law is based on convex optimizati
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}{Robotic arm}
     \begin{center}
         \begin{minipage}{0.49\linewidth}
-                \def\svgwidth{\linewidth}
+                \def\svgwidth{0.7\linewidth}
                 \input{robotic_arms.pdf_tex}
         \end{minipage}
         \hfill
@@ -623,7 +649,7 @@ Another method for finding the optimal control law is based on convex optimizati
 \begin{frame}{Parallel robot}
     \begin{center}
         \begin{minipage}{0.49\linewidth}
-                \def\svgwidth{\linewidth}
+                \def\svgwidth{0.7\linewidth}
                 \input{pick_and_place.pdf_tex}
         \end{minipage}
         \hfill
@@ -649,7 +675,7 @@ Another method for finding the optimal control law is based on convex optimizati
 \begin{frame}{Mobile robots}
     \begin{center}
         \begin{minipage}{0.49\linewidth}
-                \def\svgwidth{\linewidth}
+                \def\svgwidth{0.85\linewidth}
                 \input{logistics_1.pdf_tex}
         \end{minipage}
         \hfill
@@ -673,16 +699,40 @@ Another method for finding the optimal control law is based on convex optimizati
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[plain]
+%\begin{frame}[plain]
 
-\begin{center}
-\textbf{\Large Robotics from various perspectives}\\[6pt]
-Philipp Schlehuber-Caissier
-\end{center}
+%\begin{center}
+%\textbf{\Large Robotics from various perspectives}\\[6pt]
+%Philipp Schlehuber-Caissier
+%\end{center}
 	
-\end{frame}
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{The industrial perspective}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{My personal perspective}
+
+\begin{itemize}
+    \item Control theory provides the means to drive a robot from state \textbf{A} to state \textbf{B}
+    \item Task planning allows to compute a sequence of state in order to accomplish a task
+\end{itemize}
+
+\only<2->{
+    The complicated part is to couple them is such a way that
+    \begin{itemize}
+        \item The sequence of states is feasible for the actual robot
+        \item Other (safety) constraints are respected
+    \end{itemize}
+    That is to automatically generate a ``certificate'' of feasibility associated to the plan
+}
+\end{frame}
+
+\begin{frame}
+\end{frame}
 
 \end{document}
 
