--- a/main.tex
+++ b/main.tex
@@ -731,7 +731,10 @@ Q = \begin{bmatrix} 1. & 0. \\ 0. & 1. \end{bmatrix} \ \ \ \ R = \begin{bmatrix}
 }
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Linking control theory and computer science}
+
+Formal methods 
+
 \end{frame}
 
 \end{document}
