--- a/main.tex
+++ b/main.tex
@@ -731,8 +731,10 @@ Q = \begin{bmatrix} 1. & 0. \\ 0. & 1. \end{bmatrix} \ \ \ \ R = \begin{bmatrix}
 }
 \end{frame}
 
-\begin{frame}{Linking control theory and computer science}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Model checking}
+\begin{center}
 Formal methods developed in computer science are used to 
 \begin{itemize}
 	\item Proof that an algorithm verifies certain properties: Model checking
@@ -746,8 +748,19 @@ Formal methods developed in computer science are used to
 	\item Perform (exhaustive) search over the reachable states
 \end{itemize}
 }
+\end{center}
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Linking control theory and model checking}
+\begin{center}
+Use control theoretic proofs to construct ``atomic'' certificates
+
+
+
+\end{center}
+\end{frame}
 
 
 
